[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/character/VisionSensor.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 589.258

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, -380, -311.4, 380, -311.4 )

[node name="VisionSensor" type="Node2D"]
script = ExtResource( 1 )

[node name="PerceptionVision" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionVision"]
shape = SubResource( 1 )

[node name="RealVision" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="RealVision"]
shape = SubResource( 2 )

[node name="RememberTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
[connection signal="area_exited" from="PerceptionVision" to="." method="_on_PerceptionVision_area_exited"]
[connection signal="body_exited" from="PerceptionVision" to="." method="_on_PerceptionVision_body_exited"]
[connection signal="area_entered" from="RealVision" to="." method="_on_RealVision_area_entered"]
[connection signal="body_entered" from="RealVision" to="." method="_on_RealVision_body_entered"]
[connection signal="timeout" from="RememberTimer" to="." method="_on_RememberTimer_timeout"]
